<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="#FFF"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detalle.DetalleAdministrador">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/DetalleTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ImagenDetalleAdmin"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/admin_item"
            android:layout_marginTop="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/UidDetalleAdmin"
            android:textColor="#000"
            android:text="@string/UidDetalleAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/NombresDetalleAdmin"
            android:text="@string/NombresDetalleAdmin"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/ApellidosDetalleAdmin"
            android:text="@string/ApellidosDetalleAdmin"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/CorreoDetalleAdmin"
            android:text="@string/CorreoDetalleAdmin"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/EdadDetalleAdmin"
            android:text="@string/EdadDetalleAdmin"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>