<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#448AFF"
    tools:context=".Carga">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <!--imagen de carga-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/wallpapers_free" />

        <!--nombre de la app-->
        <TextView
            android:id="@+id/app_name"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="20sp" />

        <!--descripcion de la app-->
        <TextView
            android:id="@+id/app_name_descripcion"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:gravity="center"
            android:text="@string/app_name_descripcion"
            android:textColor="#fff"
            android:textSize="20sp" />

        <!--        nombre de desarrollador-->
        <TextView
            android:id="@+id/desarrollador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/desarrollador"
            android:textColor="#fff"
            android:textSize="18sp" />

        <!--        animacion-->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="carga_animacion.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>